partials for messages

--- a/templates/pages/base.html
+++ b/templates/pages/base.html
@@ -26,22 +26,8 @@
       </div>
     </nav>
     <div class="container mt-4">
-    
-  {% if messages %}
-    {% for message in messages %}
-      {% if message.tags == 'error' %}
-        <div class="alert alert-danger" role="alert">
-          <a href="#" class="close" data-dismiss="alert" aria-lavel="close">&times;</a>
-          {{message}}
-        </div>
-      {% else %}
-        <div class="alert alert-{{message.tags}}" role="alert">
-          <a href="#" class="close" data-dismiss="alert" aria-lavel="close">&times;</a>
-          {{message}}
-        </div>
-      {% endif %}
-    {% endfor %}
-  {% else %}{% endif %}
+      
+    {% include "partials/_message.html" %}
 
     {% block content %}
     {% endblock content %}
