sidebar w/profile photo login/signup links

--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -1,5 +1,7 @@
 {% extends 'pages/base.html' %}
 
 {{% block content %}
-index page
+<div class="row">
+    {% include 'partials/_sidebar.html' %}
+</div>
 {% endblock content %}}
