profile page/view/url + get_absolute_url

--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -1,7 +1,7 @@
 {% extends 'pages/base.html' %}
 
-{{% block content %}
+{% block content %}
 <div class="row">
-    {% include 'partials/_sidebar.html' %}
+    {% include 'pages/partials/_sidebar.html' %}
 </div>
-{% endblock content %}}
+{% endblock content %}
