--- a/pages/templates/pages/partials/_sidebar.html
+++ b/pages/templates/pages/partials/_sidebar.html
@@ -9,7 +9,8 @@
             <h4 class="card-title">
                 <a href="{{profile.get_absolute_url}}">{{profile}}</a>
                 {% if request.user == profile.user %}
-                    Welcome, {{profile.user}} <p><a href="{% url 'logout' %}">Logout</a></p>
+                <p>Welcome to PenPals, {{profile.user}}</p>
+                <p><a href="{% url 'logout' %}">Logout</a></p>
                 {% elif request.user.is_anonymous %}
                     <p><a href="{% url 'pages:signup' %}">Signup</a> | <a href="{% url 'login' %}">Login</a></p>
                 {% endif %}
