--- a/pages/templates/pages/profile.html
+++ b/pages/templates/pages/profile.html
@@ -7,7 +7,7 @@
   <div class="col-md-9 col-sm-12">
   {% if request.user.profile.id == profile.id %}
     <div class="float-right">
-      <a href="#" class="btn btn-info">Edit profile</a>
+      <a href="{% url 'pages:edit' %}" class="btn btn-info">Edit profile</a>
     </div>
     {% endif %}
     <h3>{{profile.user}}</h3>
@@ -15,6 +15,7 @@
         <h6>{{profile.first}} {{profile.last}} | {{profile.user.email}}</h6>
         <h6>Speaks: {{profile.speaks}}</h6>
         <h6>Learns: {{profile.learns}}</h6>
+
     </div>
   </div>
 </div>
