search speaks basic

--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -5,7 +5,7 @@
     <div class="card bg-light">
       <div class="card-header text-center">Search for Penpals</div>
       <div class="card-body">
-        <form action="" method="get">
+        <form action="{% url 'pages:search' %}" method="get">
           <div class="form-group">
             <label for="speaks">Speaks</label>
             <input
