--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -14,7 +14,7 @@
               value="{{request.GET.speaks}}"
               class="form-control"
               id="speaks"
-              placeholder="value1, value2"
+              placeholder="language1 language2"
             />
           </div>
           <div class="form-group">
@@ -25,7 +25,7 @@
               value="{{request.GET.learns}}"
               class="form-control"
               id="learns"
-              placeholder="value1, value2"
+              placeholder="language1 language2"
             />
           </div>
           <button type="submit" class="btn btn-info">Search</button>
