--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -36,7 +36,7 @@
 </div>
 
     <div class="row">
-        {% for u in users %}
+        {% for u in page_object %}
             <div class="col-md-3 col-sm-6">
                 <div class="card">
                     <img src="{{u.photo.url}}" class="card-img-top mx-auto">
