--- a/pages/templates/pages/partials/_sidebar.html
+++ b/pages/templates/pages/partials/_sidebar.html
@@ -2,13 +2,15 @@
     <div class="card bg-light mw-30rem">
         <div class="card-body text-center">
             <h4 class="card-title">
-                {% if request.user == profile.user %}
                 {% if profile.photo %}
                     <img src="{{profile.photo.url}}" alt="profile photo url" class="card-img-top mx-auto rounded-circle">
                 {% else %}
                     <img src="https://placehold.it/200x200" alt="profile photo url" class="card-img-top mx-auto rounded-circle">
                 {% endif %}
+                {% if not request.user.is_anonymous %}
                 <a href="{{profile.get_absolute_url}}">{{profile}}</a>
+                {% endif %}
+                {% if request.user == profile.user %}
                 <p>Welcome to PenPals, {{profile.user}}</p>
                 <p><a href="{% url 'logout' %}">Logout</a></p>
                 {% elif request.user.is_anonymous %}
