--- a/pages/templates/pages/profile.html
+++ b/pages/templates/pages/profile.html
@@ -26,7 +26,7 @@
         <h6>Speaks: {{profile.speaks}}</h6>
         <h6>Learns: {{profile.learns}}</h6>
     </div>
-    {% if request.user.profile.id == profile.id and friends %}
+    {% if friends %}
       <div class="table-responsive">
         <table class="table">
           <caption>My list of PenPals:</caption>
@@ -54,8 +54,9 @@
             <tbody>
               {% for request_received in received_requests %}
                 <tr>
-                  <td>{{request_received}}</td>
+                  <td><a href="{% url 'pages:profile' request_received.from_profile.id %}" class="btn text-primary">{{request_received.from_profile}} sent you friend request</a></td>
                   <td><a href="{% url 'pages:accept_request' request_received.from_profile.id %}" class="btn btn-primary">Accept request</a></td>
+                  <td><a href="{% url 'pages:delete_request' request_received.from_profile.id %}" class="btn btn-danger">Cancel request</a></td>
                 </tr>
               {% endfor %}
             </tbody>
