withdraw modal dialog html fix

--- a/pages/templates/pages/profile.html
+++ b/pages/templates/pages/profile.html
@@ -136,15 +136,15 @@
   </div>
 </div>
 
-<div class="model fade" id="confirmModal" tab-index="-1" caller-id="" role="dialog">
+<!-- https://getbootstrap.com/docs/4.2/components/modal/ -->
+<div class="modal fade" id="confirmModal" tab-index="-1" role="dialog">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-body">
-
       </div>
       <div class="modal-footer">
-        <button class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-        <button class="btn btn-danger" data-dismiss="modal" id="confirmButtonModal">Confirm</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-danger" data-dismiss="modal" id="confirmButtonModal">Confirm</button>
       </div>
     </div>
   </div>
