--- a/pages/templates/pages/partials/_sidebar.html
+++ b/pages/templates/pages/partials/_sidebar.html
@@ -12,7 +12,7 @@
                 {% endif %}
                 {% if request.user == profile.user %}
                 <p>Welcome to PenPals, {{profile.user}}</p>
-                <p><a href="{% url 'logout' %}">Logout</a></p>
+                <p><a href="{% url 'logout' %}">Logout</a> | <a href="{% url 'conversations:inbox' %}">Inbox</a></p>
                 {% elif request.user.is_anonymous %}
                     <p><a href="{% url 'pages:signup' %}">Signup</a> | <a href="{% url 'login' %}">Login</a></p>
                 {% endif %}
